# fiskas

./: .clang-format  CMakeLists.txt  README.md  elf_file_v2
cemetery/: main.cc  main_v2.cc  main_v3.cc  main_v4.cc
cemetery/asm_cc/: lexer.hh  mnemonic_parser.hh  parser.hh  x86_common.hh
cemetery/asm_cc_lib/: lexer.cc  lexer_test.cc  parser.cc  parser_test.cc  x86_common.cc
cemetery/assembler/: elf.hh
fiskas/: README.md  lexer.cc  lexer.hh  lexer_test.cc  parser.cc  parser.hh  parser_test.cc  x86_common.cc  x86_common.hh
fiskas/x86_instructions/mov/: mov.cc  mov.hh
include/: base.hh
include/elf/: elf_builder.hh  elf_types.hh  serializer.hh
lib/: base.cc
lib/elf/: elf_builder.cc  elf_types.cc  serializer.cc
lib/fiskas/: x86_common.cc
src/: main.cc
test/: function.asm++
